[package]
name = "rust-multihash"
version = "0.0.1"
authors = ["Nick Hamann <nick@wabbo.org>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/nham/rust-multihash"
repository = "https://github.com/nham/rust-multihash"

[dependencies]
rust-crypto = "*"

[dependencies.rust-base58]
git = "https://github.com/nham/rust-base58.git"
